--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
+    "mdbreact": "^4.7.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
