--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aos": "^2.3.3",
     "bootstrap": "^4.1.3",
+    "firebase": "^5.4.2",
     "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "mdbreact": "^4.7.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
